# remon

./:   .coderabbit.yaml  .dockerignore  .env.example  .env.local  .gitignore  README.md  Untitled.ipynb  alembic.ini  check_s3.py  docker-compose.yml  hybrid_search.py  init_env.sh  main.html  package-lock.json  package.json  pyproject.toml  remon.sh  requirements-api.txt  requirements.txt  run_full_pipeline.py  save_all_crawlers.py  save_crawler_to_db CAL.py  save_crawler_to_db US.py  save_crawler_to_db.py  schema.sql  setup_python.sh  test.py  test_generate_strategy.py  test_generate_strategy_single.py  test_graph.ipynb  test_integration.py  test_report_node.py
.github/: copilot-instructions.md
.github/workflows/: ci_pipeline.yaml  test.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  test-checkpoint.ipynb
alembic/: env.py
alembic/versions/: 3b14f1d93836_jsonb.py  bf56b3582149_initial_migration.py  caa88c203a42_jsonb.py
app/: main.py  schema.json
app/ai_pipeline/: __init__.py  graph.py  graph_ex.py  llm_engine.py  state.py  state_bak.py  test_hybrid_search.py  test_mapping_node.py  test_strategy_node.py  utils.py
app/api/: admin_api.py  ai_api.py  auth_api.py  collect_api.py  dashboard_api.py  health_api.py  mapping_api.py  refine_api.py  regulation_api.py  report_api.py  sample_api.py  translation_api.py
app/config/: config.yaml  constants.py  logger.py  settings.py
app/core/: database.py  transaction.py
app/crawler/: cleaner.py  discovery_agent.py  pdf_language_detector.py  run_crawler.py
app/services/: admin_service.py  ai_service.py  auth_service.py  cache_service.py  collect_service.py  dashboard_service.py  mapping_service.py  refine_service.py  regulation_service.py  report_service.py  s3_service.py  sample_service.py  translation_helper.py  translation_service.py
app/templates/: combined_report.html.j2  report.html.j2  translated_markdown.html.j2
app/tests/: test_collect.py
app/utils/: db.py  file_utils.py  redis_utils.py  s3_client.py  s3_uploader.py  text_utils.py
app/vectorstore/: __init__.py  vector_client.py  vector_schema.py
application_service/: build.gradle
auth_service/: build.gradle
data/: qdrant_sample.json  sample_products.json  sample_regulations.json  ⓐ1.공중보건담배1969년 흡연법STATUTE-84-Pg87-2_congress.txt  ⓑ3. 제8.6부. 2003년 담배 및 담배 제품 허가법22970-22991-3Codes Display Text.txt  ⓒ1. 독성 물질에 노출된 재향군인의 건강 관리 및 혜택을 개선하고 기타 목적을 위한 법률 STATUTE-120-Pg2922_congress.txt  ⓓ1. 가족 흡연 예방 및 담배 규제법 (Family Smoking Prevention and Tobacco Control Act)_미국연방의회(fda_gov, federalregister_gov).txt  ⓔ4. 샌프란시스코건강법 san_francisco-ca-1.txt  ⓕ2.담배 및 기타 특정 연소 담배 제품의 니코틴 함량에 대한 담배 제품 표준_2025-00397_FDA.txt  ⓖ2.기관 정보 수집 활동; 제안된 수집; 의견 요청; 연방 식품, 의약품 및 화장품법에 따른 담배 제품 및 담배 연기의 유해 및 잠재적으로 유해한 성분 보고2025-11959_FDA.txt
data/embeddings/: chroma.sqlite3  test_results.json  ⓐ1.공중보건담배1969년 흡연법STATUTE-84-Pg87-2_congress_chunks.json  ⓐ1.공중보건담배1969년 흡연법STATUTE-84-Pg87-2_congress_definitions.json  ⓐ1.공중보건담배1969년 흡연법STATUTE-84-Pg87-2_congress_metadata.json  ⓑ3. 제8.6부. 2003년 담배 및 담배 제품 허가법22970-22991-3Codes Display Text_chunks.json  ⓑ3. 제8.6부. 2003년 담배 및 담배 제품 허가법22970-22991-3Codes Display Text_definitions.json  ⓑ3. 제8.6부. 2003년 담배 및 담배 제품 허가법22970-22991-3Codes Display Text_metadata.json  ⓒ1. 독성 물질에 노출된 재향군인의 건강 관리 및 혜택을 개선하고 기타 목적을 위한 법률 STATUTE-120-Pg2922_congress_chunks.json  ⓒ1. 독성 물질에 노출된 재향군인의 건강 관리 및 혜택을 개선하고 기타 목적을 위한 법률 STATUTE-120-Pg2922_congress_definitions.json  ⓒ1. 독성 물질에 노출된 재향군인의 건강 관리 및 혜택을 개선하고 기타 목적을 위한 법률 STATUTE-120-Pg2922_congress_metadata.json  ⓓ1. 가족 흡연 예방 및 담배 규제법 (Family Smoking Prevention and Tobacco Control Act)_미국연방의회(fda_gov, federalregister_gov)_chunks.json  ⓓ1. 가족 흡연 예방 및 담배 규제법 (Family Smoking Prevention and Tobacco Control Act)_미국연방의회(fda_gov, federalregister_gov)_definitions.json  ⓓ1. 가족 흡연 예방 및 담배 규제법 (Family Smoking Prevention and Tobacco Control Act)_미국연방의회(fda_gov, federalregister_gov)_metadata.json  ⓔ4. 샌프란시스코건강법 san_francisco-ca-1_chunks.json  ⓔ4. 샌프란시스코건강법 san_francisco-ca-1_definitions.json  ⓔ4. 샌프란시스코건강법 san_francisco-ca-1_metadata.json  ⓕ2.담배 및 기타 특정 연소 담배 제품의 니코틴 함량에 대한 담배 제품 표준_2025-00397_FDA_chunks.json  ⓕ2.담배 및 기타 특정 연소 담배 제품의 니코틴 함량에 대한 담배 제품 표준_2025-00397_FDA_definitions.json  ⓕ2.담배 및 기타 특정 연소 담배 제품의 니코틴 함량에 대한 담배 제품 표준_2025-00397_FDA_metadata.json  (+3 more)
data/qdrant/: meta.json  raft_state.json
db/: models.py  remon_sample_data.sql  remon_table.sql
docs/: CODE_COMMENT_GUIDE_v0.3.md  README.md  architecture.md
frontend/: App.vue  index.html  main.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/components/: ChartPanel.vue  DataTable.vue  HeaderBar.vue  (+1 more)
remon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: create_qdrant_collection.py  embed_ktng_strategies.py  process_regulation.py  read_s3_hello.py  run_ai_pipeline.py  run_full_pipeline.py  run_graph_full.py  run_vision_pipeline copy.py  run_vision_pipeline.py  start_qdrant.sh  test_change_detection.py  test_chatbot_cli.py  test_hitl_node.py  test_mapping.py  test_qdrant.py  test_qdrant_connection.py  test_rag_query.py  test_search_tool.py  test_vision_quick.py  upload_to_s3.sh  view_qdrant_data.py
(+346 files in other folders)
