[project]
name = "remon"
version = "0.4"
description = "For Deployment Prepare"
requires-python = ">=3.11"

# 공통 (API와 AI 모두 사용하는 가벼운 패키지)
dependencies = [
  "loguru==0.7.2",
  "python-dotenv>=1.2.1",
  "tornado<6.4",
  "pyjwt>=2.10.1",
  "aiosqlite>=0.21.0",
  "httpx<0.28",
]

# -------------------------------
# API / AI / Crawler dependency group
# -------------------------------
[project.optional-dependencies]

# -----------------------------------
# API 서버(FastAPI) & DB 접근
# -----------------------------------
api = [
  "fastapi==0.115.0",
  "uvicorn==0.31.1",
  "sqlalchemy==2.0.36",
  "pydantic-settings>=2.11.0",
  "langgraph>=1.0.2",
  "langchain-core>=1.0.3",
  "sentence-transformers==3.0.1",
  "torch>=2.6,<3.0", # 변경: 최소 2.6 이상 (CVE 대응)
  "numpy==2.1.2",
  "pandas==2.2.3",
  "openai==1.43.0",
  "alembic>=1.17.2",
  "python-dotenv>=1.2.1",
  # --- Crawler ---
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
  "aiohttp==3.10.5",
  "pyjwt>=2.10.1",
  # --- Document Processing ---
  "pdfplumber>=0.9.0",
  "pypdf>=4.0.0",
  "pypdfium2>=4.30.0",
  "pytesseract>=0.3.13",
  "pillow>=10.0.0",
  "python-multipart>=0.0.20",
  "langchain-text-splitters>=0.3.0",
  "tiktoken>=0.8.0",
  "networkx>=3.0",
  # --- VectorDB ---
  "qdrant-client>=1.15.1",
  # --- Database ---
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  # --- Cache/Session ---
  "redis>=5.0.0",
  "aioredis>=2.0.1",
  # --- Testing ---
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "aiosqlite>=0.21.0",
  # --- Development ---
  "black>=24.0.0",
  "isort>=5.13.0",
  "flake8>=7.0.0",
  "httpx<0.28",

  "pytest-asyncio>=1.3.0",
  "aiosqlite>=0.21.0",
  "asyncpg>=0.29.0",
  "rank-bm25>=0.2.2",
  "pymupdf>=1.26.6",
  "requests==2.32.3",
  "psycopg2-binary>=2.9.11",
]

# -----------------------------------
# Crawler (API 서버에서 돌리므로 API 이미지에도 포함될 수 있음)
# -----------------------------------
crawler = [
  "aiohttp==3.10.5",
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
]

# -----------------------------------
# AI Worker (LangGraph, LLM, OCR, PDF parsing, VectorDB)
# -----------------------------------
ai = [
  "langgraph>=1.0.2",
  "langchain-core>=1.0.3",
  "sentence-transformers==3.0.1",
  "torch>=2.6,<3.0",
  "numpy==2.1.2",
  "pandas==2.2.3",
  "openai==1.43.0",
  "pypdf>=4.0.0",
  "qdrant-client>=1.15.1",
  "rank-bm25>=0.2.2",
]

# -----------------------------------
# Test group
# -----------------------------------
test = [
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
]

