[project]
name = "remon"
version = "0.4"
description = "For Deployment Prepare"
requires-python = ">=3.11,<3.12"

dependencies = [
  "loguru==0.7.2",
  "python-dotenv>=1.2.1",
  "tornado<6.4",
  "pyjwt>=2.10.1",
  "aiosqlite>=0.21.0",
  "httpx<0.28",

  "fastapi==0.115.0",
  "uvicorn==0.31.1",
  "sqlalchemy==2.0.36",
  "pydantic-settings>=2.11.0",
  "python-multipart>=0.0.20",
  "requests==2.32.3",
  "psycopg2-binary>=2.9.11",
  "asyncpg>=0.29.0",

  
  "aiohttp==3.10.5",
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",

  
  "langgraph==0.2.0",
  "sentence-transformers==3.0.1",
  "torch>=2.6,<3.0",
  "numpy==2.1.2",
  "pandas==2.2.3",
  "openai==1.43.0",
  "pypdf>=4.0.0",
  "qdrant-client>=1.15.1",
  "rank-bm25>=0.2.2",

  
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",

]
